--- a/Models/ML_Thesis/GBM_Thesis.Rmd
+++ b/Models/ML_Thesis/GBM_Thesis.Rmd
@@ -858,7 +858,57 @@ time_taken
 stopCluster(cl)
 ```
 
+### 4.1 Final Model with Tuned Hypers: Bedrooms test
+```{r}
 
+# Use parallel computing to speed up processing time
+cl <- makePSOCKcluster(5)
+registerDoParallel(cl)
+
+start_time <- proc.time()
+# parameter list
+params <- list(
+  eta = 0.01,
+  max_depth = 7,
+  min_child_weight = 1,
+  subsample = 0.65,
+  colsample_bytree = 0.9
+)
+
+# train final model
+xgb.fit.final <- xgboost(
+  params = params,
+  data = features_train,
+  label = response_train,
+  nrounds = 1827,
+  objective = "reg:linear",
+  verbose = 0
+)
+end_time <- proc.time()
+time_taken <- end_time - start_time
+time_taken
+
+stopCluster(cl)
+
+
+# Test Error of final Model
+# predict values for test data
+pred <- predict(xgb.fit.final, features_test)
+
+# results
+caret::RMSE(pred, response_test)
+## [1] 21319.4
+
+# plot error vs number trees
+ggplot(xgb.fit.final$evaluation_log) +
+  geom_line(aes(iter, train_rmse), color = "red")
+
+# plot error vs number trees
+ggplot(xgb.fit.final$evaluation_log) +
+  geom_line(aes(iter, train_rmse), color = "red")
+
+
+```
 
 End of Code
 
